First Jenkinsable Draft

--- a/config-1.1.0.yml
+++ b/config-1.1.0.yml
@@ -1,7 +1,11 @@
 terraform:
   var_files:
     - credentials.tfvars
-    - placeholder.tfvars
+  common:
+    :project: "vyos testing"
+    :env: "testing"
+spec_roles:
+    - vyos-base
 network:
   common:
     :tun1_ip_nm: "30"
@@ -9,11 +13,9 @@ network:
     :vyos_version: "1.1.0"
     :vyos_ami: "1.1.0"
     :ssh_username: "vyos"
-    :ssh_keypath: "~/.ssh/id_rsa"
   aws:
     :instance_type: "t2.micro"
-    :ssh_keyname: "terraform"
-    :subnet_id: "subnet-1234567"
+    :subnet_id: "subnet-efff3a87"
     :region: "eu-west-1"
     :ami: "ami-5e77c229"
   vyos01:
